users: Fix broken alignment of the first column in groups table

--- a/pkg/users/users.scss
+++ b/pkg/users/users.scss
@@ -106,3 +106,7 @@
 .group-more-btn {
   font-size: var(--pf-global--FontSize--sm);
 }
+
+#groups-list td:first-child {
+  vertical-align: middle;
+}
